# MiniML

./: .gitignore  .ocamlformat  CONTRIBUTING.md  LICENSE  MiniML.opam  README.en.md  README.md  dune-project
.github/workflows/: ci.yml
_build/: log
lib/: ast.ml  ast.mli  dune  eval.ml  lexer.ml  lexer.mli  parser.ml  parser.mli
test/: dune  test_MiniML.ml
